fix form spacing

--- a/source/_patterns/02-molecules/statistic/_statistic.scss
+++ b/source/_patterns/02-molecules/statistic/_statistic.scss
@@ -47,13 +47,12 @@ Molecule: Statistic
     }
 
     a {
-      color: inherit;
+      color: var(--blue--darker--40);
 
       &:active,
       &:focus,
       &:hover {
-        color: inherit;
-        background-color: inherit;
+        color: var(--white);
       }
     }
   }
